<resources>
    <string name="app_name">Vana Studio</string>
    <string name="web_client_id">949863238367-f19gnkp1mvvgkfcfn03rpjl3h65ffimg.apps.googleusercontent.com</string>
    <string name="noUser">You are not logged in,\nplease <font color="#FF0000" font-weight="bold">sign in</font> to see your profile.</string>
    <string name="privacy1">When you use our application, we may collect different types of information to provide and improve our services. This includes <font font-weight="bold">personal data</font> such as your name, email address, or phone number if you choose to provide them when registering or contacting us. We also collect <font font-weight="bold">usage data</font>, which may include details about your device, operating system, IP address, and information on how you interact with the app. If you grant permission, we may also collect <font font-weight="bold">location data</font> to provide location-based services, such as nearby recommendations. Additionally, we may use <font font-weight="bold">cookies and tracking technologies</font> to enhance your experience, analyze app usage, and improve performance.</string>
    <string name="privacy2">We use the information we collect from you to provide and maintain our services, as well as to enhance your overall user experience. Your personal data may be used to personalize features, process bookings or payments, send you updates or notifications, and communicate with you about important information related to the app. We also use your information to ensure the security of our services, prevent fraudulent activities, and comply with legal requirements. In some cases, and only with your consent, we may also send you promotional offers or marketing communications.</string>
    <string name="privacy3">We may share your personal information with third parties, but only under specific circumstances. Your data may be disclosed to <font font-style="bold">service providers</font> who assist us in operating the app, such as payment processors, analytics services, or customer support providers. We may also share your information when required by law, such as responding to government requests or legal proceedings. In the event of a business transfer, such as a merger or acquisition, your data may be included as part of the transferred assets. Apart from these cases, we will only share your data with third parties when you have given us your explicit consent.</string>
    <string name="privacy4">Your personal data will be kept only for as long as necessary to fulfill the purposes described in this Privacy Policy. If the data is no longer needed or you request deletion, we will securely remove it unless we are legally required to keep it for longer.</string>
    <string name="privacy5">We take the security of your information seriously and use reasonable technical and organizational measures to protect your personal data. However, it is important to note that no system or method of electronic storage is completely secure, and while we strive to protect your information, we cannot guarantee absolute security.</string>
    <string name="privacy6">Depending on your jurisdiction, you may have certain rights regarding your personal information. These rights may include the ability to access and review the data we hold about you, request corrections or deletion, and withdraw consent for certain types of data processing. If you would like to exercise these rights, please contact us directly at <font font-weight="bold">support-customer@vanastudio.com</font>!</string>
    <string name="privacy7">We may update this Privacy Policy from time to time to reflect changes in our practices or for other operational, legal, or regulatory reasons. Any significant changes will be communicated to you through the app or our website, and the updated version will take effect immediately upon posting.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="facebook_app_id">4023905081195145</string>
    <string name="fb_login_protocol_scheme">fb4023905081195145</string>
    <string name="facebook_client_token">812f6bf00e56d80db2523c047cf64ecb</string>
</resources>