<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.PrivacyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/turnbackBtn"
            android:layout_width="45dp"
            android:layout_height="47dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_icon" />

        <TextView
            android:id="@+id/textView54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="Privacy Policy"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/turnbackBtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout33">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView55"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_bold"
                    android:text="1. Type of Data We Collect"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView56"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/urbanist"
                    android:justificationMode="inter_word"
                    android:text="@string/privacy1"
                    android:textColor="#616161"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/textView55"
                    app:layout_constraintTop_toBottomOf="@id/textView55" />

                <TextView
                    android:id="@+id/textView57"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:text="2. Use of Your Personal Data"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="@+id/textView56"
                    app:layout_constraintTop_toBottomOf="@+id/textView56" />

                <TextView
                    android:id="@+id/textView58"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/urbanist"
                    android:justificationMode="inter_word"
                    android:text="@string/privacy2"
                    android:textColor="#616161"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/textView57"
                    app:layout_constraintTop_toBottomOf="@+id/textView57" />

                <TextView
                    android:id="@+id/textView59"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:text="3. Disclosure of Your Personal Data"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="@+id/textView58"
                    app:layout_constraintTop_toBottomOf="@+id/textView58" />

                <TextView
                    android:id="@+id/textView60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/urbanist"
                    android:justificationMode="inter_word"
                    android:text="@string/privacy3"
                    android:textColor="#616161"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/textView59"
                    app:layout_constraintTop_toBottomOf="@id/textView59" />

                <TextView
                    android:id="@+id/textView61"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:text="4. Data Retention"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="@id/textView60"
                    app:layout_constraintTop_toBottomOf="@id/textView60" />

                <TextView
                    android:id="@+id/textView62"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/urbanist"
                    android:justificationMode="inter_word"
                    android:text="@string/privacy4"
                    android:textColor="#616161"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/textView61"
                    app:layout_constraintTop_toBottomOf="@id/textView61" />

                <TextView
                    android:id="@+id/textView63"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:text="5. Security of Your Data"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="@id/textView62"
                    app:layout_constraintTop_toBottomOf="@id/textView62" />

                <TextView
                    android:id="@+id/textView64"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/urbanist"
                    android:justificationMode="inter_word"
                    android:text="@string/privacy5"
                    android:textColor="#616161"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/textView63"
                    app:layout_constraintTop_toBottomOf="@id/textView63" />

                <TextView
                    android:id="@+id/textView65"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:text="6. Your Privacy Rights"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="@id/textView64"
                    app:layout_constraintTop_toBottomOf="@id/textView64" />

                <TextView
                    android:id="@+id/textView66"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/urbanist"
                    android:justificationMode="inter_word"
                    android:text="@string/privacy6"
                    android:textColor="#616161"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/textView65"
                    app:layout_constraintTop_toBottomOf="@id/textView65" />

                <TextView
                    android:id="@+id/textView67"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:text="7. Changes to This Privacy"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="@id/textView66"
                    app:layout_constraintTop_toBottomOf="@id/textView66" />

                <TextView
                    android:id="@+id/textView68"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/urbanist"
                    android:justificationMode="inter_word"
                    android:text="@string/privacy7"
                    android:textColor="#616161"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/textView67"
                    app:layout_constraintTop_toBottomOf="@id/textView67" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>